--- a/marketplace_de.html
+++ b/marketplace_de.html
@@ -30,24 +30,18 @@
     <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
   </div><!-- close flags -->
 </div><!-- close navbar	 -->
+    <div class="banner"><a href="images/events1_de.jpg"><img src="images/thumbs/events1_de.jpg" alt="1" title="1"></a> <a href="images/events2_de.jpg"><img src="images/thumbs/events2_de.jpg" alt="2" title="2"></a> <a href="images/events3_de.jpg"><img src="images/thumbs/events3_de.jpg" alt="3" title="3"></a> </div><!-- close banner -->
     <div class="content">
       <div class=tbox>
-        <h1>G1MRA contact email addresses</h1>
-        <p>
-          Committee chair: <a href="mailto:chair@g1mra.com">chair@g1mra.com</a></p>
-<p>          Committee secretary: <a href="mailto:secretary@g1mra.com">secretary@g1mra.com</a></p>
-<p>          Treasurer: <a href="mailto:treasurer@g1mra.com">treasurer@g1mra.com</a></p>
-<p>          Technical officer: <a href="mailto:technical@g1mra.com">technical@g1mra.com</a></p>
-<p>          Supplier liaison officer: <a href="mailto:supplier-liason@g1mra.com">supplier-liason@g1mra.com</a></p>
-<p>          Group liason officer: <a href="mailto:group-liason@g1mra.com">group-liason@g1mra.com</a></p>
-<p>          Newletter and Journal editor: <a href="mailto:nljeditor@g1mra.com">nljeditor@g1mra.com</a></p>
-<p>          Diary and event listing: <a href="mailto:events-diary@g1mra.com">events-diary@g1mra.com</a></p>
-<p>          Show organisation and liason: <a href="mailto:events-organisation@g1mra.com">events-organisation@g1mra.com</a></p>
-<p>          Book sales: <a href="mailto:books@g1mra.com">books@g1mra.com</a></p>
-<p>          Parts, kits and clothing sales: <a href="mailto:sales@g1mra.com">sales@g1mra.com</a></p>
-<p>          Membership enquiries: <a href="mailto:membership@g1mra.com">membership@g1mra.com</a></p>
-<p>          Web page corrections and updates: <a href="mailto:web@g1mra.com">web@g1mra.com</a>
-        </p>
+    <h1>The G1MRA marketplace</h1>
+
+<h2>Books</h2>
+<h2>Parts</h2>
+<h2>Complete kits</h2>
+<h2>Clothing</h2>
+    <h1>Member to member sales and wants</h1>
+<h2>For sale</h2>
+<h2>Wanted</h2>
       </div><!-- close tbox -->
     </div>
   </div><!-- close vbox --></div><!-- close cbox -->
