--- a/marketplace_fr.html
+++ b/marketplace_fr.html
@@ -30,30 +30,18 @@
     <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
   </div><!-- close flags -->
 </div><!-- close navbar	 -->
-<div class="navbar">
-<div class=cbox>
-  <div class=hbox>
-    <a href="events_en.html">Safety</a>
-    <a href="groups_en.html">Standards</a>
-    <a href="resources_en.html">History</a>
-    <a href="shop_en.html">Designs</a>
-    <a href="members_en.html">Tracks</a>
-    <a href="contact_en.html">Suppliers</a>
-    <a href="join_en.html">Friends</a>
-  </div><!-- close hbox -->	
-</div><!-- close cbox -->
-</div>
+    <div class="banner"><a href="images/events1_fr.jpg"><img src="images/thumbs/events1_fr.jpg" alt="1" title="1"></a> <a href="images/events2_fr.jpg"><img src="images/thumbs/events2_fr.jpg" alt="2" title="2"></a> <a href="images/events3_fr.jpg"><img src="images/thumbs/events3_fr.jpg" alt="3" title="3"></a> </div><!-- close banner -->
     <div class="content">
       <div class=tbox>
-    <h1>Resources</h1>
+    <h1>The G1MRA marketplace</h1>
 
-<h2>Safety</h2>
-<h2>Standards</h2>
-<h2>History</h2>
-<h2>Designs</h2>
-<h2>Our tracks</h2>
-<h2>Suppliers</h2>
-<h2>Friends and links</h2>
+<h2>Books</h2>
+<h2>Parts</h2>
+<h2>Complete kits</h2>
+<h2>Clothing</h2>
+    <h1>Member to member sales and wants</h1>
+<h2>For sale</h2>
+<h2>Wanted</h2>
       </div><!-- close tbox -->
     </div>
   </div><!-- close vbox --></div><!-- close cbox -->
