--- a/events_en.html
+++ b/events_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 04:15:37 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 04:32:58 -->
 <head>
 <link rel="stylesheet" href="G1MRA.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,9 +19,8 @@
     <a href="events_en.html">Events</a>
     <a href="groups_en.html">Groups</a>
     <a href="resources_en.html">Resources</a>
-    <a href="shop_en.html">Shop</a>
-    <a href="sales_en.html">Sales and wants</a>
-    <a href="members_en.html">Members area</a>
+    <a href="marketpace_en.html">Marketplace</a>
+    <a href="members_en.html">Members</a>
     <a href="contact_en.html">Contacts</a>
     <a href="join_en.html">Join or renew</a>
   </div><!-- close navMenu -->
