--- a/home_fr.html
+++ b/home_fr.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 04:15:38 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 04:32:58 -->
 <head>
 <link rel="stylesheet" href="G1MRA.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,9 +19,8 @@
     <a href="events_fr.html">Events</a>
     <a href="groups_fr.html">Groups</a>
     <a href="resources_fr.html">Resources</a>
-    <a href="shop_fr.html">Shop</a>
-    <a href="sales_fr.html">Sales and wants</a>
-    <a href="members_fr.html">Members area</a>
+    <a href="marketpace_fr.html">Marketplace</a>
+    <a href="members_fr.html">Members</a>
     <a href="contact_fr.html">Contacts</a>
     <a href="join_fr.html">Join or renew</a>
   </div><!-- close navMenu -->
