--- a/marketplace_en.html
+++ b/marketplace_en.html
@@ -5,9 +5,9 @@
 <link rel="stylesheet" href="G1MRA.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
-<html lang="fr">
-<title>Accueil G1MRA</title>
-<meta name="description" content="Page d'accueil de la Gauge One Model Railway Association">
+<html lang="en">
+<title>G1MRA home</title>
+<meta name="description" content="Gauge One Model Railway Association home page">
 </head>
 <body>
 <div class=cbox><div class=vbox>
@@ -16,13 +16,13 @@
     <a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a>
   </div><!-- close logo -->
   <div class="navMenu">
-    <a href="events_fr.html">Events</a>
-    <a href="groups_fr.html">Groups</a>
-    <a href="resources_fr.html">Resources</a>
-    <a href="marketpace_fr.html">Marketplace</a>
-    <a href="members_fr.html">Members</a>
-    <a href="contact_fr.html">Contacts</a>
-    <a href="join_fr.html">Join or renew</a>
+    <a href="events_en.html">Events</a>
+    <a href="groups_en.html">Groups</a>
+    <a href="resources_en.html">Resources</a>
+    <a href="marketpace_en.html">Marketplace</a>
+    <a href="members_en.html">Members</a>
+    <a href="contact_en.html">Contacts</a>
+    <a href="join_en.html">Join or renew</a>
   </div><!-- close navMenu -->
   <div class="flags">
     <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
@@ -30,30 +30,18 @@
     <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
   </div><!-- close flags -->
 </div><!-- close navbar	 -->
-<div class="navbar">
-<div class=cbox>
-  <div class=hbox>
-    <a href="events_en.html">Safety</a>
-    <a href="groups_en.html">Standards</a>
-    <a href="resources_en.html">History</a>
-    <a href="shop_en.html">Designs</a>
-    <a href="members_en.html">Tracks</a>
-    <a href="contact_en.html">Suppliers</a>
-    <a href="join_en.html">Friends</a>
-  </div><!-- close hbox -->	
-</div><!-- close cbox -->
-</div>
+    <div class="banner"><a href="images/events1_en.jpg"><img src="images/thumbs/events1_en.jpg" alt="1" title="1"></a> <a href="images/events2_en.jpg"><img src="images/thumbs/events2_en.jpg" alt="2" title="2"></a> <a href="images/events3_en.jpg"><img src="images/thumbs/events3_en.jpg" alt="3" title="3"></a> </div><!-- close banner -->
     <div class="content">
       <div class=tbox>
-    <h1>Resources</h1>
+    <h1>The G1MRA marketplace</h1>
 
-<h2>Safety</h2>
-<h2>Standards</h2>
-<h2>History</h2>
-<h2>Designs</h2>
-<h2>Our tracks</h2>
-<h2>Suppliers</h2>
-<h2>Friends and links</h2>
+<h2>Books</h2>
+<h2>Parts</h2>
+<h2>Complete kits</h2>
+<h2>Clothing</h2>
+    <h1>Member to member sales and wants</h1>
+<h2>For sale</h2>
+<h2>Wanted</h2>
       </div><!-- close tbox -->
     </div>
   </div><!-- close vbox --></div><!-- close cbox -->
