--- a/contact_de.html
+++ b/contact_de.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 04:32:59 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 04:43:30 -->
 <head>
 <link rel="stylesheet" href="G1MRA.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
     <a href="events_de.html">Events</a>
     <a href="groups_de.html">Groups</a>
     <a href="resources_de.html">Resources</a>
-    <a href="marketpace_de.html">Marketplace</a>
+    <a href="marketplace_de.html">Marketplace</a>
     <a href="members_de.html">Members</a>
     <a href="contact_de.html">Contacts</a>
     <a href="join_de.html">Join or renew</a>
