--- a/groups_fr.html
+++ b/groups_fr.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 04:32:58 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 04:43:30 -->
 <head>
 <link rel="stylesheet" href="G1MRA.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
     <a href="events_fr.html">Events</a>
     <a href="groups_fr.html">Groups</a>
     <a href="resources_fr.html">Resources</a>
-    <a href="marketpace_fr.html">Marketplace</a>
+    <a href="marketplace_fr.html">Marketplace</a>
     <a href="members_fr.html">Members</a>
     <a href="contact_fr.html">Contacts</a>
     <a href="join_fr.html">Join or renew</a>
