--- a/resources_en.html
+++ b/resources_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 04:43:29 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 05:56:50 -->
 <head>
 <link rel="stylesheet" href="G1MRA.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,6 +40,7 @@
     <a href="members_en.html">Tracks</a>
     <a href="contact_en.html">Suppliers</a>
     <a href="join_en.html">Friends</a>
+    <a href="join_en.html">Gauge 2</a>
   </div><!-- close hbox -->	
 </div><!-- close cbox -->
 </div>
@@ -54,6 +55,7 @@
 <h2>Our tracks</h2>
 <h2>Suppliers</h2>
 <h2>Friends and links</h2>
+<h2>Gauge 2</h2>
       </div><!-- close tbox -->
     </div>
   </div><!-- close vbox --></div><!-- close cbox -->
