--- a/contact_en.html
+++ b/contact_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 05:56:50 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 21:53:13 -->
 <head>
 <link rel="stylesheet" href="G1MRA.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,11 +38,12 @@
 <p>          Committee secretary: <a href="mailto:secretary@g1mra.com">secretary@g1mra.com</a></p>
 <p>          Treasurer: <a href="mailto:treasurer@g1mra.com">treasurer@g1mra.com</a></p>
 <p>          Technical officer: <a href="mailto:technical@g1mra.com">technical@g1mra.com</a></p>
-<p>          Supplier liaison officer: <a href="mailto:supplier-liason@g1mra.com">supplier-liason@g1mra.com</a></p>
-<p>          Group liason officer: <a href="mailto:group-liason@g1mra.com">group-liason@g1mra.com</a></p>
+<p>          Supplier liaison officer: <a href="mailto:suppliers@g1mra.com">suppliers@g1mra.com</a></p>
+<p>          Group liason officer: <a href="mailto:groups@g1mra.com">groups@g1mra.com</a></p>
 <p>          Newletter and Journal editor: <a href="mailto:nljeditor@g1mra.com">nljeditor@g1mra.com</a></p>
-<p>          Diary and event listing: <a href="mailto:events-diary@g1mra.com">events-diary@g1mra.com</a></p>
-<p>          Show organisation and liason: <a href="mailto:events-organisation@g1mra.com">events-organisation@g1mra.com</a></p>
+<p>          Diary and event listing: <a href="mailto:diary@g1mra.com">diary@g1mra.com</a></p>
+<p>          Show organisation and liason: <a href="mailto:events@g1mra.com">events@g1mra.com</a></p>
+<p>          Member to member sales: <a href="mailto:marketplace@g1mra.com">marketplace@g1mra.com</a></p>
 <p>          Book sales: <a href="mailto:books@g1mra.com">books@g1mra.com</a></p>
 <p>          Parts, kits and clothing sales: <a href="mailto:sales@g1mra.com">sales@g1mra.com</a></p>
 <p>          Membership enquiries: <a href="mailto:membership@g1mra.com">membership@g1mra.com</a></p>
