--- a/members_fr.html
+++ b/members_fr.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 05:56:50 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 21:53:14 -->
 <head>
 <link rel="stylesheet" href="G1MRA.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,18 +34,18 @@
       <div class=tbox>
         <h1>G1MRA members' area</h1>
         <p>
-This members' area contains encrypted files. To access them, click on the link to download a copy to your device, and then open the file. You will be asked for a password which you will find on page 666 of Newsletter and Journal issue 667.</p>
+This members' area contains encrypted files. To access them, click on the link to download a copy to your device, and then open the file. You will be asked for a password which you will in the current Newsletter and Journal issue.</p>
 <p><h1>Do not share these files or passwords</h1>
 <h2>Books</h2>
 <p><a href="encrypted/electric.zip">Volume 1: Electric Propulsion</a> </p>
-<p>Other books are available for purchase.</p>
+<p>Other books are available for purchase via our <a href="marketplace_fr.html">market place</a>.</p>
 <h2>Newsletter and Journal issues</h2>
 <h3>1947-49</h3>
 <p>
 <a href="encrypted/nlj001.zip">NLJ001</a>
 <a href="encrypted/nlj002.zip">NLJ002</a>
-</p></p>
-<p><h3>1950-59</h3>
+</p>
+<h3>1950-59</h3>
 <p>
 <a href="encrypted/nlj003.zip">NLJ003</a>
 <a href="encrypted/nlj004.zip">NLJ004</a>
@@ -89,6 +89,9 @@ This members' area contains encrypted files. To access them, click on the link t
 <a href="encrypted/nlj042.zip">NLJ042</a>
 <a href="encrypted/nlj043.zip">NLJ043</a>
 <a href="encrypted/nlj044.zip">NLJ044</a>
+</p>
+<h3>1960-69</h3>
+<p>
 <a href="encrypted/nlj045.zip">NLJ045</a>
 <a href="encrypted/nlj046.zip">NLJ046</a>
 <a href="encrypted/nlj047.zip">NLJ047</a>
@@ -119,6 +122,9 @@ This members' area contains encrypted files. To access them, click on the link t
 <a href="encrypted/nlj072.zip">NLJ072</a>
 <a href="encrypted/nlj073.zip">NLJ073</a>
 <a href="encrypted/nlj074.zip">NLJ074</a>
+</p>
+<h3>1970-79</h3>
+<p>
 <a href="encrypted/nlj075.zip">NLJ075</a>
 <a href="encrypted/nlj076.zip">NLJ076</a>
 <a href="encrypted/nlj077.zip">NLJ077</a>
@@ -150,6 +156,9 @@ This members' area contains encrypted files. To access them, click on the link t
 <a href="encrypted/nlj103.zip">NLJ103</a>
 <a href="encrypted/nlj104.zip">NLJ104</a>
 <a href="encrypted/nlj105.zip">NLJ105</a>
+</p>
+<h3>1980-89</h3>
+<p>
 <a href="encrypted/nlj106.zip">NLJ106</a>
 <a href="encrypted/nlj107.zip">NLJ107</a>
 <a href="encrypted/nlj108.zip">NLJ108</a>
@@ -189,6 +198,9 @@ This members' area contains encrypted files. To access them, click on the link t
 <a href="encrypted/nlj142.zip">NLJ142</a>
 <a href="encrypted/nlj143.zip">NLJ143</a>
 <a href="encrypted/nlj144.zip">NLJ144</a>
+</p>
+<h3>1990-99</h3>
+<p>
 <a href="encrypted/nlj145.zip">NLJ145</a>
 <a href="encrypted/nlj146.zip">NLJ146</a>
 <a href="encrypted/nlj147.zip">NLJ147</a>
@@ -229,6 +241,9 @@ This members' area contains encrypted files. To access them, click on the link t
 <a href="encrypted/nlj182.zip">NLJ182</a>
 <a href="encrypted/nlj183.zip">NLJ183</a>
 <a href="encrypted/nlj184.zip">NLJ184</a>
+</p>
+<h3>2000-09</h3>
+<p>
 <a href="encrypted/nlj185.zip">NLJ185</a>
 <a href="encrypted/nlj186.zip">NLJ186</a>
 <a href="encrypted/nlj187.zip">NLJ187</a>
@@ -269,6 +284,9 @@ This members' area contains encrypted files. To access them, click on the link t
 <a href="encrypted/nlj222.zip">NLJ222</a>
 <a href="encrypted/nlj223.zip">NLJ223</a>
 <a href="encrypted/nlj224.zip">NLJ224</a>
+</p>
+<h3>2010-19</h3>
+<p>
 <a href="encrypted/nlj225.zip">NLJ225</a>
 <a href="encrypted/nlj226.zip">NLJ226</a>
 <a href="encrypted/nlj227.zip">NLJ227</a>
@@ -309,6 +327,9 @@ This members' area contains encrypted files. To access them, click on the link t
 <a href="encrypted/nlj262.zip">NLJ262</a>
 <a href="encrypted/nlj263.zip">NLJ263</a>
 <a href="encrypted/nlj264.zip">NLJ264</a>
+</p>
+<h3>2020-</h3>
+<p>
 <a href="encrypted/nlj265.zip">NLJ265</a>
 <a href="encrypted/nlj266.zip">NLJ266</a>
 <a href="encrypted/nlj267.zip">NLJ267</a>
