--- a/home_en.html
+++ b/home_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 05:56:50 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 21:53:13 -->
 <head>
 <link rel="stylesheet" href="G1MRA.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,15 +55,27 @@
         <h1><a href="events_en.html" style="color:#165f4b;">Events</a></h1>
         
 
-<hr><h3>10 January 2026</h3>
-<p><b>Traditional First Steam GTG</b><br>Wiggertal Live Steam Group. 11:00-17:00<br><em>Register with		 <a href="mailto:edwin.burkhardt@bluewin.ch">edwin.burkhardt@bluewin.ch</a></em></p>
+<hr><h3>28 February 2026 - 1 March 2026</h3>
+<p><b><a href="https://www.meridienneexhibitions.co.uk/events/midlands-garden-rail-show">Midlands Garden Rail Show</a></b><br>Warwickshire Event Centre, <a href="https://www.google.co.uk/maps/search/CV31+1XN">CV31 1XN</a><br><em>Carding Road track courtesy of the Midland Group</em></p>
 
+<hr><h3>10 January 2026</h3>
+<p><b>Yorkshire Group New Year running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:30-15.30; meals available</em></p>
+
+<hr><h3>21 February 2026</h3>
+<p><b>Yorkshire Group running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:30-15.30; meals available</em></p>
 
 <hr><h3>28 February - 1 March 2026</h3>
 <p><b><a href="https://www.meridienneexhibitions.co.uk/events/midlands-garden-rail-show">Midlands Garden Rail Show</a></b><br>Warwickshire Event Centre, <a href="https://www.google.co.uk/maps/search/CV31+1XN">CV31 1XN</a><br><em>Carding Road track courtesy of the Midland Group</em></p>
 
 <hr><h3>4 - 8 March 2026</h3>
 <p><b><a href="https://thetraindepartment.com/collections/steam-over-spencer-registration">Steam over Spencer</a></b><br>N.C. Transportation Museum 1 Samuel Spencer Dr. Spencer, NC 28159 USA <br><em>Gathering of friends for a week of steaming with four Gauge 1 tracks available</em></p>
+
+<hr><h3>21 March 2026</h3>
+<p><b>Yorkshire Group running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:30-15.30; meals available</em></p>
+
+<hr><h3>18 April 2026</h3>
+<p><b>G1MRA Spring Meeting</b><br>Statfold Country Park <a href="https://www.google.co.uk/maps/search/B79+0BU">B79 0BU</a><br><em>Anglia Roads courtesy of the East Anglian Group and Carding Road courtesy of the Midland Group, plustrade support</em></p>
+
 
       </div>
     </div>
