Add forms for new subscription and renewals

--- a/join_en.html
+++ b/join_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 21:53:13 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-12 22:13:53 -->
 <head>
 <link rel="stylesheet" href="G1MRA.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,16 +38,30 @@
 <div class="hbox">
 <div><a href="images/Recruiting-brochure-7.pdf"><img src="images/welcomeToGauge1.jpg" height="130" style="padding:20px 10px"></a></div>
 <div><a href="images/G1MRA_229.pdf"><img src="images/G1MRA_229_cover.jpg" height="130"  style="padding:20px 10px"></a></div>
-<div> <p  style="padding:0px 10px"> We run models powered by on-board batteries, by track-supplied current and by live steam with boilers fired by alcohol, gas or coal. Even clockwork engines still make occasional appearances.You can read about the breadth of activity within G1MRA by downloading these copies of our welcome brochure and a sample of our quarterly magazine.</p></div>
+<div> <p  style="padding:0px 10px"> We run models powered by on-board batteries, by track-supplied current and by live steam with boilers fired by alcohol, gas or coal. Even clockwork engines still make occasional appearances. You can read about the breadth of activity within G1MRA by downloading these copies of our welcome brochure and a sample of our quarterly magazine.</p></div>
 </div>
 
-        <h2>Subscriptions</h2>
-        <p>UK annual membership: £30.00;  Europe: £32.00; rest of the world: £36.00</p>
-<p>Family membership fee is an additional £5.00 a year, but does not include an additional magazine or voting rights.</p>
-<p>For under 18 juniors and full-time students, membership is £10 a year and includes the magazine, but not voting rights.</p>
-<p>To join, please complete <a href="images/joiningForm.pdf">this form</a> and send to <a href="mailto:membership@g1mra.com">membership@g1mra.com</a>.</p>
-      </div><!-- close tbox -->
-    </div>
+        <h2>Current subscription rates</h2>
+        <p>UK adult individual annual membership: £30.00;  Europe: £32.00; rest of the world: £36.00</p>
+<p>Family membership is an additional £5.00 a year, but does not include an additional magazine or voting rights.
+For under 18 juniors and full-time students, membership is £10 a year and includes the magazine, but not voting rights.</p>
+<p>The membership year runs from 1st January to 31st December. New members joining up to 30th November
+will receive all of the back numbers for that year. Members joining after 30th November will receive the December issue in addition to the complete following
+year’s issues
+</p>
+
+<h2>For new members</h2>
+<p>To join, please complete <a href="https://docs.google.com/forms/d/e/1FAIpQLSdCoBaQbw5ZEAoqFHoGM0an39_Jkso504Sps-j3Wf1xYC_Thw/viewform?usp=publish-editor
+">this form</a>. 
+You may pay via direct bank transfer or PayPal (with a supplement to cover PayPal fees); you will then receive a new members pack and membership number in the post
+</p>
+
+<h2>Renewal of existing membership	</h2>
+<p>To renew an existing subscription, please complete <a href="https://docs.google.com/forms/d/e/1FAIpQLSe-TQWWBqXx_GmmY1R6Dq4GKdi6xssszcm_g14AaeknNtYrwQ/viewform?usp=publish-editor">this form</a>.
+You may pay via direct bank transfer or PayPal (with a supplement to cover PayPal fees).
+</p>
+</div><!-- close tbox -->
+</div>      
   </div><!-- close vbox --></div><!-- close cbox -->
 </body>
 </html>
