--- a/home_fr.html
+++ b/home_fr.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-02 21:53:14 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-12 22:13:53 -->
 <head>
 <link rel="stylesheet" href="G1MRA.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -60,14 +60,27 @@ Nous espérons que vous apprécierez la visite de ce site. Nos membres forment u
         <h1><a href="events_en.html" style="color:#165f4b;">Events</a></h1>
         
 
-<hr><h3>28 February 2026 - 1 March 2026</h3>
-<p><b><a href="https://www.meridienneexhibitions.co.uk/events/midlands-garden-rail-show">Midlands Garden Rail Show</a></b><br>Warwickshire Event Centre, <a href="https://www.google.co.uk/maps/search/CV31+1XN">CV31 1XN</a><br><em>Carding Road track courtesy of the Midland Group</em></p>
-
 <hr><h3>10 January 2026</h3>
-<p><b>Yorkshire Group New Year running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:30-15.30; meals available</em></p>
+<p><b>Traditional First Steam GTG (Members only)</b><br><a href="mailto:wiggertal-live-steam-group@g1mra.com">wiggertal-live-steam-group@g1mra.com</a><br><em>11.00-17.00</em></p>
+
+<hr><h3>11 January 2026</h3>
+<p><b>Midland Group running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; bacon or sausage baps 11.30-13.00; tea and coffee all day</em></p>
+
+<hr><h3>13 January 2026</h3> <p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
+
+<hr><h3>17 January 2026</h3>
+<p><b>Yorkshire Group New Year's running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:00-15.00; bar meals available</em></p>
+
+<hr><h3>8 February 2026</h3>
+<p><b>Midland Group running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; bacon or sausage baps 11.30-13.00; tea and coffee all day</em></p>
+
+<hr><h3>10 February 2026</h3> <p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
 
 <hr><h3>21 February 2026</h3>
-<p><b>Yorkshire Group running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:30-15.30; meals available</em></p>
+<p><b>Yorkshire Group running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:00-15.00; bar meals available</em></p>
+
+<hr><h3>21-22 February 2026</h3>
+<p><b><a href="https://www.mytenterden.co.uk/events/tenterden-model-railway-exhibition-listing-602-124492.aspx">Tenterden Model Railway Show</a></b><br>Homewood School, Ashford Road <a href="https://www.google.co.uk/maps/search/TN30+6LT">TN30 6LT</a><br><em>Invicta track courtesy of South East Group</em></p>
 
 <hr><h3>28 February - 1 March 2026</h3>
 <p><b><a href="https://www.meridienneexhibitions.co.uk/events/midlands-garden-rail-show">Midlands Garden Rail Show</a></b><br>Warwickshire Event Centre, <a href="https://www.google.co.uk/maps/search/CV31+1XN">CV31 1XN</a><br><em>Carding Road track courtesy of the Midland Group</em></p>
@@ -75,12 +88,20 @@ Nous espérons que vous apprécierez la visite de ce site. Nos membres forment u
 <hr><h3>4 - 8 March 2026</h3>
 <p><b><a href="https://thetraindepartment.com/collections/steam-over-spencer-registration">Steam over Spencer</a></b><br>N.C. Transportation Museum 1 Samuel Spencer Dr. Spencer, NC 28159 USA <br><em>Gathering of friends for a week of steaming with four Gauge 1 tracks available</em></p>
 
+<hr><h3>8 March 2026</h3>
+<p><b>Midland Group running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; bacon or sausage baps 11.30-13.00; tea and coffee all day</em></p>
+
+
+<hr><h3>10 March 2026</h3> <p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
+
 <hr><h3>21 March 2026</h3>
-<p><b>Yorkshire Group running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:30-15.30; meals available</em></p>
+<p><b>Yorkshire Group running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:00-15.00; bar meals available</em></p>
 
-<hr><h3>18 April 2026</h3>
-<p><b>G1MRA Spring Meeting</b><br>Statfold Country Park <a href="https://www.google.co.uk/maps/search/B79+0BU">B79 0BU</a><br><em>Anglia Roads courtesy of the East Anglian Group and Carding Road courtesy of the Midland Group, plustrade support</em></p>
+<hr><h3>21-22 March 2026</h3>
+<p><b>London Festival of Model Railways</b><br>Alexandra Palace <a href="https://www.google.co.uk/maps/search/N22+7AY">N22 7AY</a><br><em>G1MRA display and stand</em></p>
 
+<hr><h3>21-22 March 2026</h3>
+<p><b><a href="https://www.internationale-spur-0-tage.de/">International Gauge 0 and Gauge 1 Days</a></b><br>Hessenhallen in Gießen, Germany<br>(~70km north of Frankfurt)<br><em>Multiple G1 exhibits and traders</em></p>
 
       </div>
     </div>
