Tidy suppliers page

--- a/events_en.html
+++ b/events_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-18 10:31:24 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-20 19:15:45 -->
 <head>
 <link rel="stylesheet" href="G1MRA.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,6 @@
     <a href="groups_en.html">Groups</a>
     <a href="resources_en.html">Resources</a>
     <a href="marketplace_en.html">Marketplace</a>
-    <a href="members_en.html">Members</a>
     <a href="contact_en.html">Contacts</a>
     <a href="join_en.html">Join or renew</a>
   </div><!-- close navMenu -->
@@ -32,22 +31,13 @@
 </div><!-- close navbar	 -->
     <div class="banner"><a href="images/events1_en.jpg"><img src="images/thumbs/events1_en.jpg" alt="1" title="1"></a> <a href="images/events2_en.jpg"><img src="images/thumbs/events2_en.jpg" alt="2" title="2"></a> <a href="images/events3_en.jpg"><img src="images/thumbs/events3_en.jpg" alt="3" title="3"></a> </div><!-- close banner -->
     <div class="content">
-      <div class=tbox>
+      <div class=ebox>
         <h1>Events</h1>
-        <p>G1MRA organises a public Spring meeting and an Autumn AGM and exhibition each year. We also attend other public shows by invitation, often with one of our portable tracks.</p>
-<p>G1MRA groups also arrange numerous members-only meetings, many of which are in private gardens. This is a public website, so we do not publish names or addresses for these events here. To find out about activities in your area, locate your nearest group from <a href="groups_en.html">this list</a> and then email the group contact quoting your membership number. You can also email the G1MRA committee officer for groups as <a href="mailto:groups@g1mra.com">groups@g1mra.com</a></p>
+        <p>G1MRA organises a public Spring meeting and an Autumn AGM and exhibition each year, and we attend other public shows by invitation often with one of our portable tracks.</p>
+<p>G1MRA groups also arrange numerous members-only meetings, many of which are in private gardens. This is a public website, so we do not publish names or addresses for these events here. To find out about activities in your area, locate your nearest group from <a href="groups_en.html">this list</a> and then email that group's contact quoting your membership number. You may also email the G1MRA committee officer for groups as <a href="mailto:groups@g1mra.com">groups@g1mra.com</a>.</p>
+<p>You will find infomation about recent past events on <a href="pastEvents_en.html">this page</a>.
+</p>
         
-
-<hr><h3>10 January 2026</h3>
-<p><b>Traditional First Steam GTG (Members only)</b><br><a href="mailto:wiggertal-live-steam-group@g1mra.com">wiggertal-live-steam-group@g1mra.com</a><br><em>11.00-17.00</em></p>
-
-<hr><h3>11 January 2026</h3>
-<p><b>Midland Group running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; bacon or sausage baps 11.30-13.00; tea and coffee all day</em></p>
-
-<hr><h3>13 January 2026</h3> <p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
-
-<hr><h3>17 January 2026</h3>
-<p><b>Yorkshire Group New Year's running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:00-15.00; bar meals available</em></p>
 
 <hr><h3>8 February 2026</h3>
 <p><b>Midland Group running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; bacon or sausage baps 11.30-13.00; tea and coffee all day</em></p>
@@ -69,8 +59,8 @@
 <hr><h3>8 March 2026</h3>
 <p><b>Midland Group running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; bacon or sausage baps 11.30-13.00; tea and coffee all day</em></p>
 
-
-<hr><h3>10 March 2026</h3> <p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
+<hr><h3>10 March 2026</h3> 
+<p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
 
 <hr><h3>21 March 2026</h3>
 <p><b>Yorkshire Group running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:00-15.00; bar meals available</em></p>
@@ -135,7 +125,7 @@ Palace of Sweets and Nougat
 <p><b>Midland Group Christmas running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; Christmas buffet; tea and coffee all day</em></p>
 
 
-      </div><!-- close tbox -->
+      </div>
     </div>
   </div><!-- close vbox --></div><!-- close cbox -->
 </body>
