--- a/events_de.html
+++ b/events_de.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-18 10:31:25 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-20 04:39:26 -->
 <head>
 <link rel="stylesheet" href="G1MRA.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,6 @@
     <a href="groups_de.html">Groups</a>
     <a href="resources_de.html">Resources</a>
     <a href="marketplace_de.html">Marketplace</a>
-    <a href="members_de.html">Members</a>
     <a href="contact_de.html">Contacts</a>
     <a href="join_de.html">Join or renew</a>
   </div><!-- close navMenu -->
@@ -32,23 +31,12 @@
 </div><!-- close navbar	 -->
     <div class="banner"><a href="images/events1_de.jpg"><img src="images/thumbs/events1_de.jpg" alt="1" title="1"></a> <a href="images/events2_de.jpg"><img src="images/thumbs/events2_de.jpg" alt="2" title="2"></a> <a href="images/events3_de.jpg"><img src="images/thumbs/events3_de.jpg" alt="3" title="3"></a> </div><!-- close banner -->
     <div class="content">
-      <div class=tbox>
+      <div class=ebox>
         <h1>Veranstaltungen</h1>
         <p>Die G1MRA organisiert jedes Jahr ein öffentliches Frühjahrstreffen und eine Herbst-Mitgliederversammlung mit Ausstellung. Wir nehmen außerdem auf Einladung an anderen öffentlichen Ausstellungen teil, oft mit einer unserer transportablen Anlagen.</p>
 <p>G1MRA-Gruppen organisieren darüber hinaus zahlreiche Treffen, viele davon in privaten Gärten. Da dies eine öffentliche Website ist, veröffentlichen wir keine Namen oder Adressen für diese Veranstaltungen. Am besten informieren Sie sich über Aktivitäten in Ihrer Nähe, indem Sie die nächstgelegene Gruppe ausfindig machen und den Gruppenkontakt unter Angabe Ihrer Mitgliedsnummer per E-Mail an die allgemeine Adresse in der untenstehenden Tabelle senden. Sie können auch den G1MRA-Gruppenbeauftragten unter <a href="mailto:groups@g1mra.com">groups@g1mra.com</a> kontaktieren.
 </p>
         
-
-<hr><h3>10 January 2026</h3>
-<p><b>Traditional First Steam GTG (Members only)</b><br><a href="mailto:wiggertal-live-steam-group@g1mra.com">wiggertal-live-steam-group@g1mra.com</a><br><em>11.00-17.00</em></p>
-
-<hr><h3>11 January 2026</h3>
-<p><b>Midland Group running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; bacon or sausage baps 11.30-13.00; tea and coffee all day</em></p>
-
-<hr><h3>13 January 2026</h3> <p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
-
-<hr><h3>17 January 2026</h3>
-<p><b>Yorkshire Group New Year's running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:00-15.00; bar meals available</em></p>
 
 <hr><h3>8 February 2026</h3>
 <p><b>Midland Group running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; bacon or sausage baps 11.30-13.00; tea and coffee all day</em></p>
@@ -70,8 +58,8 @@
 <hr><h3>8 March 2026</h3>
 <p><b>Midland Group running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; bacon or sausage baps 11.30-13.00; tea and coffee all day</em></p>
 
-
-<hr><h3>10 March 2026</h3> <p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
+<hr><h3>10 March 2026</h3> 
+<p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
 
 <hr><h3>21 March 2026</h3>
 <p><b>Yorkshire Group running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:00-15.00; bar meals available</em></p>
@@ -136,7 +124,7 @@ Palace of Sweets and Nougat
 <p><b>Midland Group Christmas running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; Christmas buffet; tea and coffee all day</em></p>
 
 
-      </div><!-- close tbox -->
+      </div>
     </div>
   </div><!-- close vbox --></div><!-- close cbox -->
 </body>
