--- a/home_fr.html
+++ b/home_fr.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-18 10:31:25 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-20 04:39:25 -->
 <head>
 <link rel="stylesheet" href="G1MRA.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,6 @@
     <a href="groups_fr.html">Groups</a>
     <a href="resources_fr.html">Resources</a>
     <a href="marketplace_fr.html">Marketplace</a>
-    <a href="members_fr.html">Members</a>
     <a href="contact_fr.html">Contacts</a>
     <a href="join_fr.html">Join or renew</a>
   </div><!-- close navMenu -->
@@ -60,17 +59,6 @@ Nous espérons que vous apprécierez la visite de ce site. Nos membres forment u
         <h1><a href="events_en.html" style="color:#165f4b;">Events</a></h1>
         
 
-<hr><h3>10 January 2026</h3>
-<p><b>Traditional First Steam GTG (Members only)</b><br><a href="mailto:wiggertal-live-steam-group@g1mra.com">wiggertal-live-steam-group@g1mra.com</a><br><em>11.00-17.00</em></p>
-
-<hr><h3>11 January 2026</h3>
-<p><b>Midland Group running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; bacon or sausage baps 11.30-13.00; tea and coffee all day</em></p>
-
-<hr><h3>13 January 2026</h3> <p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
-
-<hr><h3>17 January 2026</h3>
-<p><b>Yorkshire Group New Year's running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:00-15.00; bar meals available</em></p>
-
 <hr><h3>8 February 2026</h3>
 <p><b>Midland Group running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; bacon or sausage baps 11.30-13.00; tea and coffee all day</em></p>
 
@@ -91,8 +79,8 @@ Nous espérons que vous apprécierez la visite de ce site. Nos membres forment u
 <hr><h3>8 March 2026</h3>
 <p><b>Midland Group running day (Members only)</b><br>Penkridge Peace Memorial Hall <a href="https://www.google.co.uk/maps/search/ST19+5AP">ST19 5AP</a><br><a href="mailto:midland-group@g1mra.com">midland-group@g1mra.com</a><br><em>Thompson Halt track 09:00-16.00; £5 entry + £5 runners; bacon or sausage baps 11.30-13.00; tea and coffee all day</em></p>
 
-
-<hr><h3>10 March 2026</h3> <p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
+<hr><h3>10 March 2026</h3> 
+<p><b>Surrey Group GTG (Members only)</b><br><a href="mailto:surrey-group@g1mra.com">surrey-group@g1mra.com</a><br><em></em></p>
 
 <hr><h3>21 March 2026</h3>
 <p><b>Yorkshire Group running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:00-15.00; bar meals available</em></p>
@@ -102,6 +90,9 @@ Nous espérons que vous apprécierez la visite de ce site. Nos membres forment u
 
 <hr><h3>21-22 March 2026</h3>
 <p><b><a href="https://www.internationale-spur-0-tage.de/">International Gauge 0 and Gauge 1 Days</a></b><br>Hessenhallen in Gießen, Germany<br>(~70km north of Frankfurt)<br><em>Multiple G1 exhibits and traders</em></p>
+
+        <hr>
+        <h1><a href="events_en.html">More events</a>
 
       </div>
     </div>
