--- a/resources_en.html
+++ b/resources_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-18 10:31:24 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-20 19:15:45 -->
 <head>
 <link rel="stylesheet" href="G1MRA.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,6 @@
     <a href="groups_en.html">Groups</a>
     <a href="resources_en.html">Resources</a>
     <a href="marketplace_en.html">Marketplace</a>
-    <a href="members_en.html">Members</a>
     <a href="contact_en.html">Contacts</a>
     <a href="join_en.html">Join or renew</a>
   </div><!-- close navMenu -->
@@ -33,14 +32,14 @@
 <div class="navbar">
 <div class=cbox>
   <div class=hbox>
-    <a href="events_en.html">Safety</a>
-    <a href="groups_en.html">Standards</a>
-    <a href="resources_en.html">History</a>
-    <a href="shop_en.html">Designs</a>
-    <a href="members_en.html">Tracks</a>
-    <a href="contact_en.html">Suppliers</a>
-    <a href="join_en.html">Friends</a>
-    <a href="join_en.html">Gauge 2</a>
+    <a href="safety_en.html">Safety</a>
+    <a href="standards_en.html">Standards</a>
+    <a href="history_en.html">History</a>
+    <a href="designs_en.html">Designs</a>
+    <a href="tracks_en.html">Tracks</a>
+    <a href="suppliers_en.html">Suppliers</a>
+    <a href="friends_en.html">Friends</a>
+    <a href="gauge2_en.html">Gauge 2</a>
   </div><!-- close hbox -->	
 </div><!-- close cbox -->
 </div>
