Add friends page

--- a/resources_en.html
+++ b/resources_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-20 22:46:31 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-22 06:37:49 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,7 +31,7 @@
 </div><!-- close navbar	 -->
 <div class="navbar">
 <div class=cbox>
-  <div class=hbox>Rescources: 
+  <div class=hbox>Resources: 
     <a href="safety_en.html">Safety</a>
     <a href="standards_en.html">Standards</a>
     <a href="history_en.html">History</a>
