--- a/sales_en.html
+++ b/sales_en.html
@@ -17,18 +17,17 @@
   <div class="navMenu">
 <a href="events_en.html">Events</a>
 <a href="groups_en.html">Groups</a>
-<a href="resources_en.html"><div style="background-color:mediumseagreen;">Resources</div></a>
-<a href="sales_en.html">Sales</a>
+<a href="resources_en.html">Resources</a>
+<a href="sales_en.html"><div style="background-color:mediumseagreen;">Sales</div></a>
 <a href="contact_en.html">Contact</a>
 <a href="join_en.html">Join or renew</a>
 <br><br>
-<a href="resources_en.html">Safety</a>
-<a href="resources_en.html">Standards</a>
-<a href="resources_en.html">Designs</a>
-<a href="resources_en.html">Tracks</a>
-<a href="links_en.html">Links</a>
-<a href="resources_en.html">History</a>
-<a href="resources_en.html">Gauge 2</a>
+<a href="sales_en.html">Books</a>
+<a href="sales_en.html">Parts</a>
+<a href="sales_en.html">Kits</a>
+<a href="sales_en.html">Clothing</a>
+<a href="sales_en.html">Marketplace</a>
+<a href="suppliers_en.html">Suppliers</a>
 </div>
   <div class="flags">
     <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
@@ -36,9 +35,10 @@
     <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
   </div><!-- close flags -->
 </div><!-- close navbar	 -->
+</div>
     <div class="content">
       <div class=tbox>
-    <h1>Resources</h1>
+    <h1>-</h1>
       </div><!-- close tbox -->
     </div>
   </div><!-- close vbox --></div><!-- close cbox -->
