--- a/groups_en.html
+++ b/groups_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-22 06:37:49 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-22 15:01:00 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,24 +11,17 @@
 </head>
 <body>
 <div class=cbox><div class=vbox>
-    <div class=navbar>
-  <div class="logo">
-    <a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a>
-  </div><!-- close logo -->
+    
+<div class=navbar>
+  <div class="logo"><a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a></div>
   <div class="navMenu">
-    <a href="events_en.html">Events</a>
-    <a href="groups_en.html">Groups</a>
-    <a href="resources_en.html">Resources</a>
-    <a href="marketplace_en.html">Marketplace</a>
-    <a href="contact_en.html">Contacts</a>
-    <a href="join_en.html">Join or renew</a>
-  </div><!-- close navMenu -->
-  <div class="flags">
-    <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
-    <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
-    <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
-  </div><!-- close flags -->
-</div><!-- close navbar	 -->
+<a href="events_en.html">Events</a>
+<a href="groups_en.html"><div style="background-color:mediumseagreen;">Groups</div></a>
+<a href="resources_en.html">Resources</a>
+<a href="sales_en.html">Sales</a>
+<a href="contact_en.html">Contact</a>
+<a href="join_en.html">Join or renew</a>
+<br><br>
 <div class="groupBanner">
   <a href="#flag_au"><img src="images/Flag_of_Australia_(converted).svg" alt="Jump to Australian groups" title="Jump to Australian groups"></a>
   <a href="#flag_ca"><img src="images/Flag_of_Canada_(Pantone).svg" alt="Jump to Canadian groups" title="Jump to Canadian groups"></a>
@@ -43,6 +36,13 @@
   <a href="#flag_us"><img src="images/Flag_of_the_United_States_(DoS_ECA_Color_Standard).svg" alt="Jump to US groups" title="Jump to US groups"></a>
   <a href="#flag_ww"><img src="images/Globe_icon.svg.png" alt="Jump to global special-interest groups" title="Jump to global special-interest groups"></a>
 </div>
+</div>
+  <div class="flags">
+    <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
+    <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
+    <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
+  </div><!-- close flags -->
+</div><!-- close navbar	 -->
     <div class="banner"><a href="images/events1_en.jpg"><img src="images/thumbs/events1_en.jpg" alt="1" title="1"></a> <a href="images/events2_en.jpg"><img src="images/thumbs/events2_en.jpg" alt="2" title="2"></a> <a href="images/events3_en.jpg"><img src="images/thumbs/events3_en.jpg" alt="3" title="3"></a> </div><!-- close banner -->
     <div class="content">
       <div class=tbox>
