--- a/join_en.html
+++ b/join_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-22 06:37:49 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-22 15:01:00 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,18 +11,17 @@
 </head>
 <body>
 <div class=cbox><div class=vbox>
-    <div class=navbar>
-  <div class="logo">
-    <a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a>
-  </div><!-- close logo -->
+    
+<div class=navbar>
+  <div class="logo"><a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a></div>
   <div class="navMenu">
-    <a href="events_en.html">Events</a>
-    <a href="groups_en.html">Groups</a>
-    <a href="resources_en.html">Resources</a>
-    <a href="marketplace_en.html">Marketplace</a>
-    <a href="contact_en.html">Contacts</a>
-    <a href="join_en.html">Join or renew</a>
-  </div><!-- close navMenu -->
+<a href="events_en.html">Events</a>
+<a href="groups_en.html">Groups</a>
+<a href="resources_en.html">Resources</a>
+<a href="sales_en.html">Sales</a>
+<a href="contact_en.html">Contact</a>
+<a href="join_en.html"><div style="background-color:mediumseagreen;">Join or renew</div></a>
+<br><br></div>
   <div class="flags">
     <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
     <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
@@ -56,13 +55,13 @@ year’s issues
 <p>Payment may be made by direct bank transfer, cheque or by <a target="_blank" rel="noopener noreferrer" href="https://www.paypal.com/signin">PayPal</a> (with a £2.00 supplement to cover PayPal fees). You will then receive a new members pack and membership number in the post.
 </p>
 
-<h2>Renewal of existing membership	</h2>
+<h2>Renewal of existing membership</h2>
 <p>To renew an existing subscription online, please complete <a target="_blank" rel="noopener noreferrer" href="https://docs.google.com/forms/d/e/1FAIpQLSe-TQWWBqXx_GmmY1R6Dq4GKdi6xssszcm_g14AaeknNtYrwQ/viewform?usp=publish-editor">this form</a>.</p>
 <p>If you prefer a paper form, please post a completed copy of <a target="_blank" rel="noopener noreferrer" href="images/renewalForm.pdf">this form</a> to the address at the top of the form.   </p>
 <p>Payment may be made by direct bank transfer, cheque or by <a target="_blank" rel="noopener noreferrer" href="https://www.paypal.com/signin">PayPal</a> (with a £2.00 supplement to cover PayPal fees).
 </p>
 </div><!-- close tbox -->
 </div>      
-  </div><!-- close vbox --></div><!-- close cbox -->
+</div><!-- close vbox --></div><!-- close cbox -->
 </body>
 </html>
