--- a/pastEvents_en.html
+++ b/pastEvents_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-22 06:37:49 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-22 15:01:00 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,18 +11,17 @@
 </head>
 <body>
 <div class=cbox><div class=vbox>
-    <div class=navbar>
-  <div class="logo">
-    <a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a>
-  </div><!-- close logo -->
+    
+<div class=navbar>
+  <div class="logo"><a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a></div>
   <div class="navMenu">
-    <a href="events_en.html">Events</a>
-    <a href="groups_en.html">Groups</a>
-    <a href="resources_en.html">Resources</a>
-    <a href="marketplace_en.html">Marketplace</a>
-    <a href="contact_en.html">Contacts</a>
-    <a href="join_en.html">Join or renew</a>
-  </div><!-- close navMenu -->
+<a href="events_en.html"><div style="background-color:mediumseagreen;">Events</div></a>
+<a href="groups_en.html">Groups</a>
+<a href="resources_en.html">Resources</a>
+<a href="sales_en.html">Sales</a>
+<a href="contact_en.html">Contact</a>
+<a href="join_en.html">Join or renew</a>
+<br><br></div>
   <div class="flags">
     <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
     <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
@@ -83,7 +82,7 @@ Exeter <a href="https://www.google.co.uk/maps/search/EX2+8FD">EX2 8FD</a><br><em
 <hr><h3>17 January 2026</h3>
 <p><b>Yorkshire Group New Year's running day</b><br>Drax Power Station Social Club <a href="https://www.google.co.uk/maps/search/YO8+8PJ">YO8 8PJ</a><br><a href="mailto:yorkshire-group@g1mra.com">yorkshire-group@g1mra.com</a><br><em>Ridings track 09:00-15.00; bar meals available</em></p>
 
-      </div>
+      </div><!-- close ebox -->
     </div>
   </div><!-- close vbox --></div><!-- close cbox -->
 </body>
