--- a/suppliers_en.html
+++ b/suppliers_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-22 06:37:49 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-22 15:01:00 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,18 +11,24 @@
 </head>
 <body>
 <div class=cbox><div class=vbox>
-    <div class=navbar>
-  <div class="logo">
-    <a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a>
-  </div><!-- close logo -->
+    
+<div class=navbar>
+  <div class="logo"><a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a></div>
   <div class="navMenu">
-    <a href="events_en.html">Events</a>
-    <a href="groups_en.html">Groups</a>
-    <a href="resources_en.html">Resources</a>
-    <a href="marketplace_en.html">Marketplace</a>
-    <a href="contact_en.html">Contacts</a>
-    <a href="join_en.html">Join or renew</a>
-  </div><!-- close navMenu -->
+<a href="events_en.html">Events</a>
+<a href="groups_en.html">Groups</a>
+<a href="resources_en.html"><div style="background-color:mediumseagreen;">Resources</div></a>
+<a href="sales_en.html">Sales</a>
+<a href="contact_en.html">Contact</a>
+<a href="join_en.html">Join or renew</a>
+<br><br>
+<a href="sales_en.html">Books</a>
+<a href="sales_en.html">Parts</a>
+<a href="sales_en.html">Kits</a>
+<a href="sales_en.html">Clothing</a>
+<a href="sales_en.html">Marketplace</a>
+<a href="sales_en.html"><div style="background-color:mediumseagreen;">Suppliers</div></a>
+</div>
   <div class="flags">
     <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
     <a href="home_de.html"><img src="images/Flag_of_Germany_(RGB).svg" title="Select German site"></a>
@@ -398,7 +404,7 @@ Railway and other transport books.</p>
 <p><a href="mailto:louise@vectis.co.uk">louise@vectis.co.uk</a>
 </p>
 
-</div></div>
+</div><!-- close ebox --></div>
   </div><!-- close vbox --></div><!-- close cbox -->
 </body>
 </html>
