Change menu highlight to use foreground colour

--- a/join_en.html
+++ b/join_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-22 15:01:00 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-23 23:00:29 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
 <a href="resources_en.html">Resources</a>
 <a href="sales_en.html">Sales</a>
 <a href="contact_en.html">Contact</a>
-<a href="join_en.html"><div style="background-color:mediumseagreen;">Join or renew</div></a>
+<a href="join_en.html"><div style="color:mediumseagreen;">Join or renew</div></a>
 <br><br></div>
   <div class="flags">
     <a href="home_en.html"><img src="images/Flag_of_the_United_Kingdom_(3-5).svg" title="Select English site"></a>
