--- a/events_en.html
+++ b/events_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-22 15:01:00 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-23 23:00:29 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
 <div class=navbar>
   <div class="logo"><a href="index.html"><img src="images/g1mra-logo-75-retina-e1707147947727-300x300.png" title="Home page"></a></div>
   <div class="navMenu">
-<a href="events_en.html"><div style="background-color:mediumseagreen;">Events</div></a>
+<a href="events_en.html"><div style="color:mediumseagreen;">Events</div></a>
 <a href="groups_en.html">Groups</a>
 <a href="resources_en.html">Resources</a>
 <a href="sales_en.html">Sales</a>
