--- a/resources_en.html
+++ b/resources_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-22 15:01:00 -->
+<!-- G1MRA page by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-23 23:00:29 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
   <div class="navMenu">
 <a href="events_en.html">Events</a>
 <a href="groups_en.html">Groups</a>
-<a href="resources_en.html"><div style="background-color:mediumseagreen;">Resources</div></a>
+<a href="resources_en.html"><div style="color:mediumseagreen;">Resources</div></a>
 <a href="sales_en.html">Sales</a>
 <a href="contact_en.html">Contact</a>
 <a href="join_en.html">Join or renew</a>
